new products model

--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -19,8 +19,8 @@ html
     .container
       .sidebar
         ul.nav
-          li
-            a(href="/admin/productlist") 商品管理
+          li.active
+            a(href="/admin") 商品管理
           li
             a(href="/admin/userlist") 用户列表
       .main
