--- a/app/views/pages/admin/product_management.jade
+++ b/app/views/pages/admin/product_management.jade
@@ -1,32 +1,34 @@
 extends ../../adminLayout
 
 block content
-  .header
-    h2 商品管理
-  .productlist.section
-    .head
-      p 商品资源（共555件）
-      a.newpdt(href="javascript:;")
-        i.fa.fa-plus
-        | 添加商品
-    table
-      thead
-        tr
-          td 图片
-          td 商品名称
-          td 商品分类
-          td 创建时间
-          td 操作
-      tbody
-        tr
-          td
-            .imgbox
-              img(src="")
-          td 短袖圆领白衬衫
-          td
-            span 夏季
-            span 衬衫
-          td 2016/5/23
-          td
-            a(href="javascript:;") 编辑
-            a(href="javascript:;") 删除
+  //- .header
+  h2 商品管理
+  div.wrapper
+    .productlist.section
+      .head
+        h3 商品资源（共555件）
+        a.newpdt(href="javascript:;")
+          i.fa.fa-plus
+          | 添加商品
+      table
+        thead
+          tr
+            td 图片
+            td 商品名称
+            td 商品分类
+            td 创建时间
+            td 操作
+        tbody
+          tr
+            td
+              .imgbox
+                img(src="")
+            td 短袖圆领白衬衫
+            td
+              span 夏季
+              span 衬衫
+            td 2016/5/23
+            td
+              a.edit(href="javascript:;") 编辑
+              a.delete(href="javascript:;") 删除
+  include new-product
