--- a/public/less/new-product.less
+++ b/public/less/new-product.less
@@ -1,17 +1,5 @@
-.model{
-  display: none;
-  width: 846px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%,-50%);
-  -moz-transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  -o-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%);
-  z-index: 9999;
-  border: 1px solid #e7e7eb;
-  .model-header{
+.modal{
+  .modal-header{
     width: 100%;
     height: 52px;
     line-height: 52px;
@@ -29,15 +17,50 @@
       margin-top: 15px;
     }
   }
-  .model-content{
+  .modal-content{
     padding: 20px;
-    text-align: center;
     background: #fff;
+    border-radius: 0;
+    box-shadow: none;
     form{
       width: 433px;
       margin: auto;
       .form-group{
-        margin-bottom: 25px;
+        margin-bottom: 15px;
+        position: relative;
+        .newsize,.delete{
+          position: absolute;
+          left: 100%;
+          top: 0;
+          white-space: nowrap;
+          line-height: 32px;
+        }
+        .pic-wrap{
+          display: inline-block;
+        }
+        .newpic{
+          display: inline-block;
+          width: 50px;
+          height: 50px;
+          color: #d9dadc;
+          border: 1px dashed #d9dadc;
+          text-align: center;
+          line-height: 50px;
+          position: relative;
+          &:hover{
+            border-color: #a9a9a9;
+            color: #a9a9a9;
+          }
+          input{
+            width: 50px;
+            height: 50px;
+            position: absolute;
+            top:0;
+            left: 0;
+            cursor: pointer;
+            opacity: 0;
+          }
+        }
       }
       label{
         width: 76px;
@@ -53,10 +76,9 @@
       }
     }
   }
-  .model-footer{
+  .modal-footer{
     width: 100%;
     height: 65px;
-    line-height: 65px;
     border-top: 1px solid #e7e7eb;
     background: #f4f5f9;
     text-align: center;
@@ -79,12 +101,4 @@
       }
     }
   }
-}
-.mask{
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0,.4);
 }
