--- a/public/style/new-product.css
+++ b/public/style/new-product.css
@@ -1,18 +1,4 @@
-.model {
-  display: none;
-  width: 846px;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -moz-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  z-index: 9999;
-  border: 1px solid #e7e7eb;
-}
-.model .model-header {
+.modal .modal-header {
   width: 100%;
   height: 52px;
   line-height: 52px;
@@ -21,32 +7,68 @@
   box-sizing: border-box;
   padding: 0 18px;
 }
-.model .model-header h3 {
+.modal .modal-header h3 {
   font-size: 14px;
   font-weight: bold;
   display: inline-block;
 }
-.model .model-header .close {
+.modal .modal-header .close {
   display: inline-block;
   margin-top: 15px;
 }
-.model .model-content {
+.modal .modal-content {
   padding: 20px;
-  text-align: center;
   background: #fff;
+  border-radius: 0;
+  box-shadow: none;
 }
-.model .model-content form {
+.modal .modal-content form {
   width: 433px;
   margin: auto;
 }
-.model .model-content form .form-group {
-  margin-bottom: 25px;
+.modal .modal-content form .form-group {
+  margin-bottom: 15px;
+  position: relative;
 }
-.model .model-content form label {
+.modal .modal-content form .form-group .newsize,
+.modal .modal-content form .form-group .delete {
+  position: absolute;
+  left: 100%;
+  top: 0;
+  white-space: nowrap;
+  line-height: 32px;
+}
+.modal .modal-content form .form-group .pic-wrap {
+  display: inline-block;
+}
+.modal .modal-content form .form-group .newpic {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  color: #d9dadc;
+  border: 1px dashed #d9dadc;
+  text-align: center;
+  line-height: 50px;
+  position: relative;
+}
+.modal .modal-content form .form-group .newpic:hover {
+  border-color: #a9a9a9;
+  color: #a9a9a9;
+}
+.modal .modal-content form .form-group .newpic input {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  opacity: 0;
+}
+.modal .modal-content form label {
   width: 76px;
   margin-right: 7px;
 }
-.model .model-content form input {
+.modal .modal-content form input {
   width: 342px;
   height: 32px;
   box-sizing: border-box;
@@ -54,37 +76,28 @@
   border: 1px solid #e7e7eb;
   outline: none;
 }
-.model .model-footer {
+.modal .modal-footer {
   width: 100%;
   height: 65px;
-  line-height: 65px;
   border-top: 1px solid #e7e7eb;
   background: #f4f5f9;
   text-align: center;
 }
-.model .model-footer button {
+.modal .modal-footer button {
   width: 106px;
   height: 32px;
   line-height: 32px;
   box-sizing: border-box;
   vertical-align: middle;
 }
-.model .model-footer button.next {
+.modal .modal-footer button.next {
   color: #fff;
   background: #4285f4;
   border: none;
   margin-right: 14px;
 }
-.model .model-footer button.cancle {
+.modal .modal-footer button.cancle {
   color: #bdbdbd;
   border: 1px solid #e7e7eb;
   background: #fff;
-}
-.mask {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0.4);
 }
