--- a/public/style/new-product.css
+++ b/public/style/new-product.css
@@ -41,6 +41,11 @@
 .modal .modal-content form .form-group .pic-wrap {
   display: inline-block;
 }
+.modal .modal-content form .form-group .pic-wrap img {
+  display: inline-block;
+  width: 50px;
+  margin-right: 5px;
+}
 .modal .modal-content form .form-group .newpic {
   display: inline-block;
   width: 50px;
@@ -50,6 +55,7 @@
   text-align: center;
   line-height: 50px;
   position: relative;
+  cursor: pointer;
 }
 .modal .modal-content form .form-group .newpic:hover {
   border-color: #a9a9a9;
@@ -63,6 +69,7 @@
   left: 0;
   cursor: pointer;
   opacity: 0;
+  filter: alpha(opacity=0);
 }
 .modal .modal-content form label {
   width: 76px;
