--- a/app/views/pages/admin/new-product.jade
+++ b/app/views/pages/admin/new-product.jade
@@ -30,7 +30,7 @@
           .pic-wrap
           a.newpic(href="javascrip:void(0);")
             i.fa.fa-plus
-            input(type="file",name="picture",accept="image/*",multiple="multiple")
+          input.hide(type="file",name="picture",accept="image/*")
     .modal-footer
       button.next(type="submit") 确定
       button.cancle 取消
