--- a/public/less/new-product.less
+++ b/public/less/new-product.less
@@ -57,16 +57,16 @@
             border-color: #a9a9a9;
             color: #a9a9a9;
           }
-          input{
-            width: 50px;
-            height: 50px;
-            position: absolute;
-            top:0;
-            left: 0;
-            cursor: pointer;
-            opacity: 0;
-            filter: alpha(opacity=0);
-          }
+          // input{
+          //   width: 50px;
+          //   height: 50px;
+          //   position: absolute;
+          //   top:0;
+          //   left: 0;
+          //   cursor: pointer;
+          //   opacity: 0;
+          //   filter: alpha(opacity=0);
+          // }
         }
       }
       label{
