--- a/public/less/new-product.less
+++ b/public/less/new-product.less
@@ -37,10 +37,45 @@
         }
         .pic-wrap{
           display: inline-block;
-          img{
+          line-height: 50px;
+          vertical-align: middle;
+          .imgbox{
+            position: relative;
             display: inline-block;
             width: 50px;
-            margin-right: 5px;
+            height: 50px;
+            vertical-align: middle;
+            margin-right: 15px;
+          }
+          .icon{
+            color: #fff;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            line-height: 10px;
+            text-align: center;
+            background: #000;
+            position: absolute;
+            top: -5px;
+            right: -5px;
+            cursor: pointer;
+            -webkit-transition: all 0.3s;
+            -moz-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            transition: all 0.3s;
+            &:hover{
+              -webkit-transform: scale(1.5,1.5);
+              -moz-transform: scale(1.5,1.5);
+              -o-transform: scale(1.5,1.5);
+              transform: scale(1.5,1.5);
+            }
+          }
+          img{
+            display: inline-block;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
           }
         }
         .newpic{
@@ -57,16 +92,6 @@
             border-color: #a9a9a9;
             color: #a9a9a9;
           }
-          // input{
-          //   width: 50px;
-          //   height: 50px;
-          //   position: absolute;
-          //   top:0;
-          //   left: 0;
-          //   cursor: pointer;
-          //   opacity: 0;
-          //   filter: alpha(opacity=0);
-          // }
         }
       }
       label{
