--- a/public/style/new-product.css
+++ b/public/style/new-product.css
@@ -40,11 +40,46 @@
 }
 .modal .modal-content form .form-group .pic-wrap {
   display: inline-block;
+  line-height: 50px;
+  vertical-align: middle;
+}
+.modal .modal-content form .form-group .pic-wrap .imgbox {
+  position: relative;
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  vertical-align: middle;
+  margin-right: 15px;
+}
+.modal .modal-content form .form-group .pic-wrap .icon {
+  color: #fff;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  line-height: 10px;
+  text-align: center;
+  background: #000;
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.modal .modal-content form .form-group .pic-wrap .icon:hover {
+  -webkit-transform: scale(1.5, 1.5);
+  -moz-transform: scale(1.5, 1.5);
+  -o-transform: scale(1.5, 1.5);
+  transform: scale(1.5, 1.5);
 }
 .modal .modal-content form .form-group .pic-wrap img {
   display: inline-block;
-  width: 50px;
-  margin-right: 5px;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .modal .modal-content form .form-group .newpic {
   display: inline-block;
