--- a/app/views/pages/admin/new-product.jade
+++ b/app/views/pages/admin/new-product.jade
@@ -8,29 +8,29 @@
       form#newproduct(action="/admin/new",method="POST",enctype="multipart/form-data")
         .form-group
           label(for="name") 商品名称
-          input#name(type="text",name="product[name]")
+          input#name.required(type="text",name="product[name]")
         .form-group
           label(for="price") 价格
-          input#price(type="text",name="product[price]")
+          input#price.required.rqrednum(type="text",name="product[price]")
         .form-group
           label(for="discount") 折扣
-          input#discount(type="text",name="product[discount]")
+          input#discount.rqrednum(type="text",name="product[discount]",placeholder="1-10")
         .size-box
           .form-group
             label 尺寸
-            input.size.sizetext(type="text",name="product[size]")
+            input.required.size.sizetext(type="text",name="product[size]")
             a.newsize(href="javascrip:void(0);")
               i.fa.fa-plus
               | 增加尺寸
         .form-group
           label(for="stock") 库存
-          input#stock(type="text")
+          input#stock.required.rqrednum(type="text")
         .form-group.uploadPic-form
           label 图片
           .pic-wrap
           a.newpic(href="javascrip:void(0);")
             i.fa.fa-plus
-          input.hide(type="file",name="picture",accept="image/*")
+          input.required.hide(type="file",name="picture",accept="image/*")
     .modal-footer
-      button.next(type="submit") 确定
+      button.next.disabled(type="submit") 确定
       button.cancle 取消
