--- a/public/less/new-product.less
+++ b/public/less/new-product.less
@@ -103,8 +103,12 @@
         height: 32px;
         box-sizing: border-box;
         padding: 8px;
+        border-radius: 3px;
         border: 1px solid #e7e7eb;
         outline: none;
+        &.err{
+          border-color: #a94442;
+        }
       }
     }
   }
