cross page session

--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -14,7 +14,7 @@ html
           .logo SHOPIN
           span.name 后台管理系统
         .user
-          a.username(href="javascrip:;") 123@123.com
+          a.username(href="javascrip:;") #{user.name}
           a.logout(href="#") 退出
     .container
       .sidebar
