--- a/app/views/pages/admin/product_management.jade
+++ b/app/views/pages/admin/product_management.jade
@@ -3,7 +3,7 @@ extends ../../adminLayout
 block content
   //- .header
   h2 商品管理
-  div.wrapper
+  .wrapper
     .productlist.section
       .head
         h3 商品资源（共555件）
