userlist & compare encryption password

--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -15,7 +15,7 @@ html
           span.name 后台管理系统
         .user
           a.username(href="javascrip:;") #{user.name}
-          a.logout(href="#") 退出
+          a.logout(href="/logout") 退出
     .container
       .sidebar
         ul.nav
