--- a/public/less/userlist.less
+++ b/public/less/userlist.less
@@ -1,20 +1,22 @@
 @import 'mixin.less';
 .userlist{
-  .table{
-    width: 100%;
+  table{
     border: 1px solid #e7e7eb;
-    dd,dt{
+    .user_id{
       display: inline-block;
-      width: 50px;
-      padding-left: 15px;
-      height: 40px;
-      border-bottom: 1px solid #e7e7eb;
-    }
-    .name{
-      width: 350px;
+      width: 120px;
+      height: 30px;
+      margin: 0 10px;
+      &:focus{
+        border-color: #ccc;
+        box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+      }
     }
     .operate{
-      width:auto;
+      width: 400px;
+    }
+    .form-wrapper{
+      display: none;
     }
   }
 }
