--- a/public/style/userlist.css
+++ b/public/style/userlist.css
@@ -1,18 +1,19 @@
-.userlist .table {
-  width: 100%;
+.userlist table {
   border: 1px solid #e7e7eb;
 }
-.userlist .table dd,
-.userlist .table dt {
+.userlist table .user_id {
   display: inline-block;
-  width: 50px;
-  padding-left: 15px;
-  height: 40px;
-  border-bottom: 1px solid #e7e7eb;
+  width: 120px;
+  height: 30px;
+  margin: 0 10px;
 }
-.userlist .table .name {
-  width: 350px;
+.userlist table .user_id:focus {
+  border-color: #ccc;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 }
-.userlist .table .operate {
-  width: auto;
+.userlist table .operate {
+  width: 400px;
+}
+.userlist table .form-wrapper {
+  display: none;
 }
