--- a/app/views/adminLayout.jade
+++ b/app/views/adminLayout.jade
@@ -22,7 +22,7 @@ html
           li.active
             a(href="/admin") 商品管理
           li
-            a(href="/admin/userlist") 用户列表
+            a(href="/admin/user/list") 用户列表
       .main
         block content
     include ./includes/admin-footer
