--- a/app/views/pages/home.jade
+++ b/app/views/pages/home.jade
@@ -66,7 +66,7 @@ block content
                 .wall-item
                   a.thumbnail(href="/details/#{product._id}",external)
                     .img
-                      img(src="#{product.url}")
+                      img(src="#{product.url.split(',')[0]}")
                     .caption
                       p.name #{product.name}
                       .priceattention.clearfix
@@ -79,7 +79,7 @@ block content
                 .wall-item
                   a.thumbnail(href="/details/#{product._id}",external)
                     .img
-                      img(src="#{product.url}")
+                      img(src="#{product.url.split(',')[0]}")
                     .caption
                       p.name #{product.name}
                       .priceattention.clearfix
