--- a/public/less/product_management.less
+++ b/public/less/product_management.less
@@ -24,4 +24,15 @@
       }
     }
   }
+  table{
+    .imgbox{
+      width: 50px;
+      height: 75px;
+      text-align: center;
+      overflow: hidden;
+      img{
+        width: 100%;
+      }
+    }
+  }
 }
