--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -388,6 +388,15 @@ body {
 .productlist .head .newpdt .fa {
   margin-right: 6px;
 }
+.productlist table .imgbox {
+  width: 50px;
+  height: 75px;
+  text-align: center;
+  overflow: hidden;
+}
+.productlist table .imgbox img {
+  width: 100%;
+}
 .modal .modal-header {
   width: 100%;
   height: 52px;
