fix unregist user login bug

--- a/public/less/admin-public.less
+++ b/public/less/admin-public.less
@@ -57,13 +57,15 @@ header{
   width: 1170px;
   border: 1px solid #e5e5e5;
   padding: 0;
+  position: relative;
   .clearfix();
   .sidebar{
     width: 210px;
     background: #fff;
-    height: 600px;
-    float: left;
+    height: 100%;
     border-right: 1px solid #e5e5e5;
+    position: absolute;
+    left: 0;
     .nav{
       margin-top: 35px;
       li{
