--- a/public/style/admin.css
+++ b/public/style/admin.css
@@ -114,6 +114,7 @@ header .user .logout:hover {
   width: 1170px;
   border: 1px solid #e5e5e5;
   padding: 0;
+  position: relative;
 }
 .container:after {
   content: " ";
@@ -126,9 +127,10 @@ header .user .logout:hover {
 .container .sidebar {
   width: 210px;
   background: #fff;
-  height: 600px;
-  float: left;
+  height: 100%;
   border-right: 1px solid #e5e5e5;
+  position: absolute;
+  left: 0;
 }
 .container .sidebar .nav {
   margin-top: 35px;
